<?xml version="1.0"?>
<package>
  <name>snoopy</name>
  <version>0.0.0</version>
  <description>The snoopy package</description>
  <maintainer email="ras@todo.todo">ras</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
	<metapackage />
  </export>
</package>
